tests/snapshots/overloads__hover_overload_none_match.snap
---
source: tests/overloads.rs
expression: text
---
```python
@overload
def load(path: str) -> str:
@overload
def load(path: str, *, binary: bool) -> bytes:
    """Load a file as text, or as bytes when `binary` is set."""
```
